// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly with all directions renders correctly direction column 1`] = `
<DocumentFragment>
  .cache-40xoei-Container {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 0;
}

.cache-40xoei-Container[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-40xoei-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1ygeptv-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="e1w6w4jp2 cache-40xoei-Container exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e1w6w4jp0"
        height="120"
      />
      <div
        class="cache-1ygeptv-SubContainer e1w6w4jp1"
      >
        <div
          class="cache-16otux ehpbis70"
        >
          <div
            class="cache-77g8v1 ehpbis70"
          >
            <h3
              class="cache-tjeurz e13y3mga0"
            >
              test
            </h3>
          </div>
        </div>
        Sample Alert
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with all directions renders correctly direction row 1`] = `
<DocumentFragment>
  .cache-40xoei-Container {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 0;
}

.cache-40xoei-Container[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-40xoei-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.cache-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-nad4zi-Image {
  object-fit: cover;
  border-radius: 4px 0 0 4px;
}

.cache-1ygeptv-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="e1w6w4jp2 cache-40xoei-Container exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    <div
      class="cache-gy0d8m ehpbis70"
    >
      <img
        alt=""
        class="cache-nad4zi-Image e1w6w4jp0"
        width="220"
      />
      <div
        class="cache-1ygeptv-SubContainer e1w6w4jp1"
      >
        <div
          class="cache-16otux ehpbis70"
        >
          <div
            class="cache-77g8v1 ehpbis70"
          >
            <h3
              class="cache-tjeurz e13y3mga0"
            >
              test
            </h3>
          </div>
        </div>
        Sample Alert
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with children 1`] = `
<DocumentFragment>
  .cache-40xoei-Container {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 0;
}

.cache-40xoei-Container[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-40xoei-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1ygeptv-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="e1w6w4jp2 cache-40xoei-Container exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e1w6w4jp0"
        height="120"
      />
      <div
        class="cache-1ygeptv-SubContainer e1w6w4jp1"
      >
        <div
          class="cache-16otux ehpbis70"
        >
          <div
            class="cache-77g8v1 ehpbis70"
          >
            <h3
              class="cache-tjeurz e13y3mga0"
            >
              test
            </h3>
          </div>
        </div>
        This is the children of the component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with empty string title 1`] = `
<DocumentFragment>
  .cache-40xoei-Container {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 0;
}

.cache-40xoei-Container[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-40xoei-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1ygeptv-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="e1w6w4jp2 cache-40xoei-Container exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e1w6w4jp0"
        height="120"
      />
      <div
        class="cache-1ygeptv-SubContainer e1w6w4jp1"
      >
        <div
          class="cache-16otux ehpbis70"
        >
          <div
            class="cache-77g8v1 ehpbis70"
          >
            <h3
              class="cache-tjeurz e13y3mga0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with image, title, description, subtitle and icon 1`] = `
<DocumentFragment>
  .cache-40xoei-Container {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 0;
}

.cache-40xoei-Container[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-40xoei-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1ygeptv-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-g106tl {
  color: #727683;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-10vknku {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="e1w6w4jp2 cache-40xoei-Container exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e1w6w4jp0"
        height="120"
        src="test-file-stub"
      />
      <div
        class="cache-1ygeptv-SubContainer e1w6w4jp1"
      >
        test-file-stub
        <div
          class="cache-16otux ehpbis70"
        >
          <div
            class="cache-77g8v1 ehpbis70"
          >
            <small
              class="cache-g106tl e13y3mga0"
            >
              sub title test
            </small>
            <h3
              class="cache-tjeurz e13y3mga0"
            >
              test
            </h3>
          </div>
          <p
            class="cache-10vknku e13y3mga0"
          >
            this is a description
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with required title 1`] = `
<DocumentFragment>
  .cache-40xoei-Container {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 0;
}

.cache-40xoei-Container[data-is-active='true'] {
  border: 1px solid #521094;
}

.cache-40xoei-Container[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1ygeptv-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="e1w6w4jp2 cache-40xoei-Container exwxj840"
    data-disabled="false"
    data-is-active="false"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e1w6w4jp0"
        height="120"
      />
      <div
        class="cache-1ygeptv-SubContainer e1w6w4jp1"
      >
        <div
          class="cache-16otux ehpbis70"
        >
          <div
            class="cache-77g8v1 ehpbis70"
          >
            <h3
              class="cache-tjeurz e13y3mga0"
            >
              test
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
